--- a/package.json
+++ b/package.json
@@ -22,10 +22,18 @@
     "stripe": "^8.139.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.31.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
     "@types/next-auth": "^3.7.2",
     "@types/node": "^14.14.35",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.3",
+    "babel-jest": "^26.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.3"
   }
 }
